# Multimodal-NDE-Assistant

./: README.md  app.py  file_handler.py  knowledgebot.md  models.py  nde_knowledge.py  openai_service.py  pyproject.toml  routes.py  web_scraper.py  youtube_service.py
